<resources>
    <string name="app_name">NoteApp</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="addEvent">Add Your Event here!!</string>
    <string name="enter_date">Select Date *</string>
    <string name="enter_time">Select Time *</string>
    <string name="event_name">Event Title *</string>
    <string name="event_des">Event description</string>
    <string name="empty_msg">You don\'t create any event yet</string>
    <string name="event_title">Event Title :</string>
    <string name="event_Date">Event Date :</string>
    <string name="event_time">Event Time :</string>
    <string name="event_description">Event Detaile :</string>
</resources>