<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddEventActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_back"/>
                <LinearLayout
                    android:id="@+id/viewA"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="215dp">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/ic_splashscreen"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="215dp"
                    android:background="@drawable/payment_back"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:paddingStart="5dp"
                    android:orientation="vertical"
                    android:paddingEnd="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/titleEventLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Add Event"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_marginTop="25dp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventDateLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/register_field_height"
                        android:hint="@string/enter_date"
                        android:textColorHint="@color/hint_color"
                        app:hintTextColor="@color/hint_color"
                        app:endIconMode="clear_text"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:focusable="false"
                            android:editable="false"
                            android:imeOptions="actionNext"
                            android:backgroundTint="#00FFFFFF"
                            android:textSize="14sp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/calender"
                            android:textColor="@color/black"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/timeLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/register_field_height"
                        android:hint="@string/enter_time"
                       android:layout_marginTop="10dp"
                        android:textColorHint="@color/hint_color"
                        app:hintTextColor="@color/hint_color"
                        app:endIconMode="clear_text"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="time"
                            android:focusable="false"
                            android:editable="false"
                            android:imeOptions="actionNext"
                            android:backgroundTint="#00FFFFFF"
                            android:textSize="14sp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_timer"
                            android:textColor="@color/black"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventNameLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/register_field_height"
                        android:hint="@string/event_name"
                        android:textColorHint="@color/hint_color"
                        app:hintTextColor="@color/hint_color"
                        app:endIconMode="clear_text"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:backgroundTint="#00FFFFFF"
                            android:textSize="14sp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_note"
                            android:textColor="@color/black"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventDesLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:hint="@string/event_des"
                        android:textColorHint="@color/hint_color"
                        app:hintTextColor="@color/hint_color"
                        app:endIconMode="clear_text"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventDes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text|textMultiLine"
                            android:backgroundTint="#00FFFFFF"
                            android:gravity="top"
                            android:textSize="14sp"
                            android:scrollbarAlwaysDrawVerticalTrack="true"
                            android:scrollbars="vertical"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"

                            />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveBtn"
                        android:layout_width="match_parent"
                        android:text="Save"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="20dp" />


                </LinearLayout>


            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


