<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="40dp"
                android:layout_alignParentRight="true"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_close"/>
            <LinearLayout
                android:id="@+id/viewA"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="215dp">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/appointment_list"/>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="215dp"
                android:background="@drawable/payment_back"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:paddingStart="5dp"
                    android:orientation="vertical"
                    android:paddingEnd="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Check your event details"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:layout_marginBottom="8dp"
                        android:textSize="20sp"
                        android:layout_marginTop="25dp"
                        />
                    <LinearLayout

                        android:id="@+id/tvEventTitleLayout"
                        android:layout_width="match_parent"
                       android:layout_margin="12dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1.2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="@string/event_title"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvEventTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="dentise"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout

                        android:id="@+id/tvEventDateLayout"
                        android:layout_width="match_parent"
                        android:layout_margin="12dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1.2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="@string/event_Date"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvEventDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="dentise"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout

                        android:id="@+id/tvEventTimeLayout"
                        android:layout_width="match_parent"
                        android:layout_margin="12dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1.2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="@string/event_time"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvEventTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="dentise"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout

                        android:id="@+id/tvEventDesLayout"
                        android:layout_width="match_parent"
                        android:layout_margin="12dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1.2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="@string/event_description"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:padding="5dp"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvEventDes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:textColor="#000"
                                android:text="dentise"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/updateBtn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="Update"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="20dp" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/deleteBtn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="Delete"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>




            </LinearLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>